# token-labs

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  comparison_results.json  flake.nix  test_lmcache_config.sh
.claude/: settings.local.json
.litellm_cache/: cache.db
ansible/: README.md  site.yml
baselines/: README.md  llama-3.1-8b-instruct.json
config/: lmcache-cpu-offload.yaml
deploy/: README.md  kustomization.yaml  linkedin-article.md  parallelism-strategies.md
docs/: ARCHITECTURE.md  DOCKERFILE_VERSIONS.md  GHA-RUNNER-NODE-PINNING.md  MIGRATION_NOTICE.md  NIX_FLAKE.md  accuracy-history.json  accuracy-results.html  benchmark-history.json  benchmark-results.html  benchmark-results.json  comparison-results.html  comparison-results.json  ifeval-results.json  index.html  overnight-run-2026-04-15.html  parallelism-viz.html  qwen35-27b-phase-a.html  throughput-latency.html
incident-harness/: Dockerfile  pyproject.toml
incident-harness/incident_harness/: __init__.py  config.py  harness.py  llm.py  server.py  slack.py  tools.py
monitoring/: README.md  ai-factory-dashboard.json  alerting-rules.yaml
operator/: Dockerfile  Makefile  go.mod  go.sum  main.go
postmortems/: 2026-04-14-spark01-double-failure.md
requirements/: kv_connectors.txt
results/: 2026-04-20-qwen35-27b-benchmark-writeup.md  nemotron-120b-nvfp4-isl-osl-sweep-2026-04-15.json  qwen25-7b-llmd-baseline-2026-04-08.json  qwen25-7b-llmd-chunked-prefill-2026-04-08.json  qwen25-7b-llmd-cuda-graphs-2026-04-08.json  qwen25-7b-llmd-fp8-kv-2026-04-08.json  qwen25-7b-llmd-full-stack-2026-04-08.json  (+38 more)
(+333 files in other folders)
