[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "incident-harness"
version = "0.1.0"
description = "LLM-aware incident triage loop for token-labs GPU inference cluster"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "kubernetes>=29.0",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["incident_harness*"]
